--- a/_website_/footer.html
+++ b/_website_/footer.html
@@ -1,7 +1,5 @@
-<div class="plsSavePng">
-    this website will be deleted in:<div id="timer" class="timer"></div>
-    if you want to save your result: right-click, save as..
-    <br><br>
+<div class="credit">
+    <p>keep in mind that date is in UTC+0</p>
     here is <a href="https://www.reddit.com/r/place/comments/txh660/dump_of_the_raw_unprocessed_data_i_collected/">scraped data</a>
     from <a href="https://www.reddit.com/user/opl_/">u/opl_</a>
     that made the project possible<br><br>
