faster loading update

--- a/_website_/footer.html
+++ b/_website_/footer.html
@@ -14,8 +14,9 @@
         you can find me on:
         <ul>
             <li><a href="https://www.youtube.com/channel/UCWqSytRyHyWFN2b9sJdzYmw">youtube</a></li>
-            <li><a href="https://kisielo85.itch.io/">itchio</a></li>
+            <li><a href="https://github.com/kisielo85">github</a></li>
             <li><a href="https://www.reddit.com/user/kisielo85">reddit</a></li>
+            <li><a href="https://kisielo85.itch.io/">itchio</a></li>
             <li>discord: <strong>kisielo85#2864</strong></li>
         </ul>
     </footer>
