--- a/_website_/footer.html
+++ b/_website_/footer.html
@@ -1,15 +1,28 @@
 <div id="footer" hidden>
     <div class="credit">
         <p>keep in mind that date is in UTC+0</p>
-        here is <a href="https://www.reddit.com/r/place/comments/txh660/dump_of_the_raw_unprocessed_data_i_collected/">scraped data</a>
-        from <a href="https://www.reddit.com/user/opl_/">u/opl_</a>
-        that made the project possible<br><br>
-        
-        <form action='index.php'><input type='submit' value='return' /></form>
+        data used:<br>
+        2017: <a href="https://archive.org/details/place2017-opl/">unofficial data</a>
+        from <a href="https://www.reddit.com/user/opl_/">u/opl_</a><br>
+        2022: <a href="https://www.reddit.com/r/place/comments/txh660/dump_of_the_raw_unprocessed_data_i_collected/">unofficial data</a>
+        from <a href="https://www.reddit.com/user/opl_/">u/opl_</a><br>
+
+        2023: <a href="https://mod.ifies.com/f/230728_pixelhistory.xz">unofficial data</a> from <a href="https://www.reddit.com/user/scaevolus">u/scaevolus</a><br>
+        + <a href="https://cdn.discordapp.com/attachments/297524632234229761/1133536680373133332/pixels.csv.zst">unofficial data</a> from <a href="https://www.reddit.com/u/nepeat/">u/nepeat</a><br>
+
+        official reddit datasets: 
+        <a href="https://www.reddit.com/r/redditdata/comments/6640ru/place_datasets_april_fools_2017/">2017</a> /
+        <a href="https://www.reddit.com/r/place/comments/txvk2d/rplace_datasets_april_fools_2022/">2022</a> /
+        <a href="https://www.reddit.com/r/place/comments/15bjm5o/rplace_2023_data/">2023</a><br><br>
+
+       
+        <form action='index.php'><input type='hidden' name='year' value=<?php echo $year?>><input type='submit' value='return' /></form>
     </div>
     <footer>
         <div class="ad">✨Shameless Ad✨</div>
         <br>
+        If you liked this website,<br>please consider donating:<br>
+        <a href="https://www.buymeacoffee.com/kisielo85">buymeacoffee.com/kisielo85</a><br><br>
         I sometimes do programming and stuff.<br>
         you can find me on:
         <ul>
@@ -17,7 +30,7 @@
             <li><a href="https://github.com/kisielo85">github</a></li>
             <li><a href="https://www.reddit.com/user/kisielo85">reddit</a></li>
             <li><a href="https://kisielo85.itch.io/">itchio</a></li>
-            <li>discord: <strong>kisielo85#0155</strong></li>
+            <li>discord: <strong>@kisielo85</strong></li>
         </ul>
     </footer>
 </div>
