data processing scripts + ads

--- a/_website_/footer.html
+++ b/_website_/footer.html
@@ -32,5 +32,8 @@
             <li><a href="https://kisielo85.itch.io/">itchio</a></li>
             <li>discord: <strong>@kisielo85</strong></li>
         </ul>
+        <br><br>
+        <h3>(advertisement)</h3><br>
+        <iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="advert2.html" frameborder="0" style="width:500px; height:100px; border:none"></iframe>
     </footer>
 </div>
