--- a/_website_/footer.html
+++ b/_website_/footer.html
@@ -39,4 +39,10 @@
         </ul>
         <br><br>
     </footer>
+
+    <div class="box">
+        <h3>(advertisement)</h3><br>
+        <iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="advert2.html" frameborder="0" style="width:350px; height:300px; border:none"></iframe>
+    </div>
+
 </div>
