--- a/result.html
+++ b/result.html
@@ -14,6 +14,7 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pixel finder</title>
     <link rel="stylesheet" href="style.css?m=14">
