--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HVG835GHS8"></script>
+    <script async src="http://www.googletagmanager.com/gtag/js?id=G-HVG835GHS8"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
