--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pixel finder</title>
-    <link rel="stylesheet" href="style.css?m=16">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <form action="result.html" method="GET">
@@ -40,7 +40,7 @@
         <p>you can check what I'm currently working on here:<br><a href="https://trello.com/b/vH66AXR5/pixelfinder">trello.com/b/vH66AXR5/pixelfinder</a></p>
     </div>
 
-    <script src="scripts/utils.js"></script>
+    <script src="static/utils.js"></script>
     <script>
         var nick=get("nick")
         var year=get('year')
