--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
     <!-- info -->
     <div class="box" style="text-align: left;">
-        <p>this project is on <a href="https://github.com/kisielo85/pixel_finder">github</a></p>
-        <p>you can check what I'm currently working on here:<br><a href="https://trello.com/b/vH66AXR5/pixelfinder">trello.com/b/vH66AXR5/pixelfinder</a></p>
+        <p>check out this project on <a href="https://github.com/kisielo85/pixel_finder">github</a> :D</p>
     </div>
 
     <script src="static/utils.js"></script>
