improve css on firefox

--- a/result.html
+++ b/result.html
@@ -162,16 +162,10 @@
             <div class="ad">✨Shameless Ad✨</div>
             <br>
             If you liked this website,<br>please consider donating:<br>
-            <a href="https://www.buymeacoffee.com/kisielo85">buymeacoffee.com/kisielo85</a><br><br>
+            <a href="https://ko-fi.com/kisielo85">ko-fi.com/kisielo85</a><br><br>
             I sometimes do programming and stuff.<br>
-            you can find me on:
-            <ul>
-                <li><a href="https://www.youtube.com/channel/UCWqSytRyHyWFN2b9sJdzYmw">youtube</a></li>
-                <li><a href="https://github.com/kisielo85">github</a></li>
-                <li><a href="https://www.reddit.com/user/kisielo85">reddit</a></li>
-                <li><a href="https://kisielo85.itch.io">itchio</a></li>
-                <li><a href="https://discord.com/users/430039581908271104">discord</a></li>
-            </ul>
+            more projects here:
+            <a href="https://kisielo85.github.io/">kisielo85.github.io</a>
             <br><br>
         </footer>
     </div>
